--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         technology and creativity."
     />
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://redoxx-ai-summarizer.vercel.app/">
-    <meta property="og:image" content="https://redoxx-ai-summarizer.vercel.app/og-image.png">
+    <meta property="og:url" content="https://raheem-orekoya.vercel.app/">
+    <meta property="og:image" content="https://raheem-orekoya.vercel.app/og-image.png">
     <meta property="og:site_name" content="Redoxx-AI Summarizer">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Raheem Orekoya">
     <meta name="twitter:description" content="Frontend developer hailing from Nigeria who aspires to revolutionize the web.">
-    <meta name="twitter:image" content="https://redoxx-ai-summarizer.vercel.app/og-image.png">
+    <meta name="twitter:image" content="https://raheem-orekoya.vercel.app/og-image.png">
     <meta name="twitter:site" content="@Redoxx_Code">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
